Build V 1.6
Modification de l'ensemble du code
Création de classes implementers afin d'éxécuter le code dans plusieurs classes
création d'un "menu" servant à gérer les joueurs (non traduisible pour l'instant)